--- a/User/package.json
+++ b/User/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "db:push": "drizzle-kit push:mysql --config=./drizzle.config.ts"
+    "db:push": "drizzle-kit push:mysql --config=./drizzle.config.ts",
+    "drizzle:studio": "npx drizzle-kit studio"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +15,7 @@
     "dotenv": "^16.3.2",
     "drizzle-orm": "^0.29.3",
     "express": "^4.18.2",
+    "mysql2": "^3.9.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
