--- a/User/package.json
+++ b/User/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@planetscale/database": "^1.14.0",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.2",
     "drizzle-orm": "^0.29.3",
     "express": "^4.18.2",
